# vendor_web_scraper

./: .gitignore  INSTALLATION_COMPLETE.md  README.md  demo_usage.py  dev_setup.py  pyproject.toml  requirements-selenium.txt  requirements.txt  setup.py.bak  test_formatting.py  test_framework.py  vendor_scraper_cli.py
docs/: scraped_fields.txt
examples/: demo.py  detailed_description.md  scrape_from_bom.py
src/vendor_web_scraper/: __init__.py  cli.py
src/vendor_web_scraper/core/: __init__.py  cookie_manager.py  product_model.py  scraper_base.py  scraper_factory.py
src/vendor_web_scraper/exporters/: __init__.py  base_exporter.py  excel_exporter.py  inventree_exporter.py
src/vendor_web_scraper/scrapers/: __init__.py  mouser.py  rs_components.py
src/vendor_web_scraper/utils/: __init__.py  bom_mapping.py  bom_mapping_clean.py  helpers.py
