[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendor_web_scraper"
version = "0.1.0"
description = "Extensible web scraper for vendor product information with InvenTree integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Decoda Platform", email = "dev@decoda.platform" }
]
keywords = ["web-scraping", "vendors", "inventree", "e-commerce"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pandas>=1.5.0",
    "pydantic>=1.10.0",
    "selenium>=4.8.0",
    "fake-useragent>=1.2.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "openpyxl>=3.1.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
inventree = [
    "inventree>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/decoda-platform/vendor-web-scraper"
Repository = "https://github.com/decoda-platform/vendor-web-scraper"
Documentation = "https://github.com/decoda-platform/vendor-web-scraper"
"Bug Tracker" = "https://github.com/decoda-platform/vendor-web-scraper/issues"

[project.scripts]
vendor-scraper = "vendor_web_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --strict-config --verbose"
